# libxipyaml

./: CMakeLists.txt  in.yaml  out.yaml
lib/: yaml.h
src/: XipYamlBase.c  main.c  run-emitter.c
